--- a/clusters/staging/flux-system/gotk-sync.yaml
+++ b/clusters/staging/flux-system/gotk-sync.yaml
@@ -19,6 +19,7 @@ metadata:
   name: flux-system
   namespace: flux-system
 spec:
+  prune: true
   interval: 10m0s
   path: ./clusters/staging
   prune: true
