--- a/infrastructure/base/nginx/repository.yaml
+++ b/infrastructure/base/nginx/repository.yaml
@@ -1,8 +1,8 @@
-apiVersion: kustomize.toolkit.fluxcd.io/v1
+apiVersion: source.toolkit.fluxcd.io/v1
 kind: HelmRepository
 metadata:
   name: nginx
   namespace: nginx
 spec:
-  uri: oci:/ghcr.io/nginxinc/charts
+  url: oci://ghcr.io/nginxinc/charts
   type: oci
