--- a/clusters/staging/infrastructure.yaml
+++ b/clusters/staging/infrastructure.yaml
@@ -1,12 +1,11 @@
----
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
-  name: apps
+  name: infastructure
   namespace: flux-system
 spec:
-  interval: 1m0s
-  path: ./infrastructure/staging
+  interval: 10m0s
+  path: ./infastructure/staging
   prune: true
   sourceRef:
     kind: GitRepository
